--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* { 
+* {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
     line-height: 1.6;
-    font-family: 'Poppins' , sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-header{ 
+/* HEADER */
+
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 10px 20px
 }
 
-.nav ul{
+.nav ul {
     display: flex;
     gap: 30px;
 }
 
-.nav a:hover{
+.nav a:hover {
     border-bottom: #5a5a5a 2px solid;
 }
 
-li{
+li {
     list-style: none;
 }
 
 a {
     text-decoration: none;
     color: #000;
+    cursor: pointer;
 }
 
 .user {
@@ -45,14 +46,17 @@ a {
     font-weight: 600;
 }
 
-.search-icon, .favorite-icon, .login-signup, .cart {
+.search-icon,
+.favorite-icon,
+.login-signup,
+.cart {
     display: flex;
     align-items: center;
     justify-content: center;
     size: 12px;
 }
 
-header img{
+header img {
     height: 26px;
 }
 
@@ -60,6 +64,107 @@ header img{
     padding: 5px;
 }
 
-.cart p{ 
+.cart p {
     font-size: 12px;
 }
+
+/* PRODUTOS */
+
+.banner {
+    max-width: 100vw;
+    height: 50vw;
+    max-height: 700px;
+}
+
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.lancamentos {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.lista-produtos {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.lancamentos h2 {
+    padding: 24px;
+    font-weight: 400;
+}
+
+.lista-produtos img{
+    width: 100%;
+    height: 491px;
+    padding: 10px 12px;
+    cursor: pointer;
+    margin: 15px 0;
+    line-height: 0.5px;
+    object-fit: cover;
+}
+
+.pro{
+    width: 20%;
+}
+
+.stars i {
+    color: #ffc240;
+    font-size: 10px;
+}
+
+.lancamentos h5 {
+    font-weight: 400;
+}
+
+.lancamentos #ref {
+    font-size: 10px;
+}
+
+.lancamentos h4 {
+    color: #ff5d46;
+}
+
+.lancamentos #boleto {
+    color: #ff5d46;
+    font-weight: 600;
+    font-size: 10px;
+}
+
+.lancamentos #vezes {
+    font-size: 10px;
+}
+
+.botao {
+    /* position: absolute; */
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: none;
+}
+
+.compre-button {
+    background-color: #5a5a5a;
+    color: #fff;
+    bottom: -40px;
+    left: 50%;
+    padding: 2px 3rem;
+    font-size: small;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.pro:hover .botao {
+    display: block;
+}
+
+.lista-produtos a:hover{
+    border-bottom: #5a5a5a solid ;
+}
+
