--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
 
 * {
     box-sizing: border-box;
@@ -89,14 +90,12 @@ header img {
     flex-direction: column;
     text-align: center;
     margin-bottom: 50px;
-    /* justify-content: center; */
 }
 
 .lista-produtos {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-    /* max-width: 1600px; */
     align-items: center;
 }
 
@@ -185,10 +184,6 @@ header img {
 }
 
 .feature-images {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* justify-content: space-between; */
     text-align: center;
 }
 
@@ -205,4 +200,86 @@ header img {
     justify-content: center;
     width: 1600px;
     gap: 50px;
+}
+
+.colecoes{
+    width: 100%;
+    background-color: black;
+    height: 1000px;
+    display: flex;
+    align-items: center;
+}
+
+.esquerda, .direita{
+    height: 100%;
+    width: 100%;
+}
+
+.direita{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.linhas {
+    padding: 40px 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 30px;
+}
+
+#camisolas {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.7)), url(./img/camisolas.jpg);
+    background-size: cover; 
+    height: 100%;
+    width: 100%;
+}
+
+#linha-noite{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(./img/linha-noite.jpg);
+    background-size: cover; 
+    height: 50%;
+    width: 100%;
+}
+
+#sutias{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(./img/sutias.jpg);
+    background-size: cover; 
+    height: 50%;
+    width: 100%;
+}
+
+.linhas-texto{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    color: white;
+}
+
+.linhas-texto h2 {
+    font-family: "Allura", cursive;
+    font-weight: 100;
+    font-size: 128px;
+    font-style: italic;
+    line-height: 0.6;
+}
+
+.colecoes p{
+    font-size: 24px;
+}
+
+.colecoes button{
+    background-color: transparent;
+    color: white;
+    width: 30%;
+    padding: 10px;
+    border: white 2px solid;
+    margin-top: 15px;
+    font-size: 18px;
 }
